# triviamx

./: pyproject.toml
src/: api.py  app.py  config.py  session.py  state.py  utils.py
src/assets/: main.css
src/session/: __init__.py  state.py  websocket.py
src/templates/: answer-revealed.html  answer.html  answers-revealed.html  answers.html  index.html  player-status.html  players.html  question.html  revealed-answer.html  revealed-answers.html
