[tool.poetry]
name = "triviamx"
version = "0.1.0"
description = ""
authors = ["archds <dsalekseev11@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.10.3"
litestar = {version = "^2.10.0", extras = ["standard", "cryptography"]}
msgspec = "^0.18.6"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.375"
ruff = "^0.5.7"
devtools = {version = "^0.12.2", extras = ["pygments"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 98